syntax = "proto3";

option csharp_namespace = "Users_Service";

package user;

service User {
    rpc GetUserById(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
}
